documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32NET.CS

        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListDataWrEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_ListDataWrEx(UInt32 value, Int32 index, UInt32 listaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListInit@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_ListInit(UInt32 listaddr, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListNextRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_ListNextRd(UInt32 listaddr, ref UInt16 header);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListNextWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_ListNextWr(UInt32 listaddr, ref UInt16 header);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListPostRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_ListPostRd(UInt32 listaddr, ref UInt16 header, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListPostWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_ListPostWr(UInt32 listaddr, ref UInt16 header, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListPreRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_ListPreRd(UInt32 listaddr, ref UInt16 header, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListPreWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_ListPreWr(UInt32 listaddr, ref UInt16 header, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_ListStatus(UInt32 listaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MakeLong@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_MakeLong(UInt16 valh, UInt16 vall);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MantToAscii@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _L43_MantToAscii(ref string buf, Int32 mant, Int32 exp);
        public static string L43_MantToAscii(ref string buf, Int32 mant, Int32 exp) { return Marshal.PtrToStringAnsi(_L43_MantToAscii(ref buf, mant, exp)); }
        [DllImport("L43W32.DLL", EntryPoint = "_L43_Mask@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_Mask(UInt32 dataval, Int32 cntval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MaxMant@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_MaxMant(ref UInt32 mant, ref Int32 exp);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MEMWINFillW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_MEMWINFillW(UInt16 value, UInt32 addrval, UInt32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MEMWINRdB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_MEMWINRdB(UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MEMWINRdL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_MEMWINRdL(UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MEMWINRdsL@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_MEMWINRdsL(ref UInt32 valueptr, UInt32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MEMWINRdsW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_MEMWINRdsW(ref UInt16 valueptr, UInt32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MEMWINRdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_MEMWINRdW(UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MEMWINWrB@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_MEMWINWrB(UInt16 value, UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MEMWINWrL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_MEMWINWrL(UInt32 value, UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MEMWINWrsL@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_MEMWINWrsL(ref UInt32 valueptr, UInt32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MEMWINWrsW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_MEMWINWrsW(ref UInt16 valueptr, UInt32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MEMWINWrW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_MEMWINWrW(UInt16 value, UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_Mod@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_Mod(UInt32 moda, UInt32 modb);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MsgActivityRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_MsgActivityRd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MsgActivityWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_MsgActivityWr(UInt16 value, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MsgCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_MsgCheck(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MsgConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_MsgConfig(UInt32 configval, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MsgOptRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_MsgOptRd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MsgOptWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_MsgOptWr(UInt16 msgopt, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_MsgReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_MsgReset(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_Mul@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_Mul(UInt32 mula, UInt32 mulb);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_NormalMant@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_NormalMant(ref UInt32 mant, ref Int32 exp);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_PortRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_PortRd(Int32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_PortWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_PortWr(UInt16 value, Int32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ProgRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_ProgRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ProgWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_ProgWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_RAMFill@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_RAMFill(UInt16 value, UInt32 addrval, UInt32 countval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_RAMIsDPM@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_RAMIsDPM(UInt32 addrval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_RAMRdB@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_RAMRdB(UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_RAMRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_RAMRdL(UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_RAMRdsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_RAMRdsL(ref UInt32 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_RAMRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_RAMRdsW(ref UInt16 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_RAMRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_RAMRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_RAMWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_RAMWipe(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_RAMWipeEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_RAMWipeEx(UInt16 value, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_RAMWrB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_RAMWrB(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_RAMWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_RAMWrL(UInt32 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_RAMWrsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_RAMWrsL(ref UInt32 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
